--- a/application/views/product.html
+++ b/application/views/product.html
@@ -42,10 +42,9 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="index.html">HOME</a></li>
-					<li><a data-toggle="modal" data-target="#myModal" href="#myModal" class="signin">SIGN IN</a></li>
-					<li><a href="services.html">SIGN UP</a></li>
-					<li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="signin.html">SIGN IN</a></li>
+					<li><a href="signup.html">SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -54,7 +53,7 @@
 	<div id="myheaderwrap">
 		<div class="container">
 			<div class="row centered">
-			<h2>Just let me <b>Shop</b> and no one gets hurt. <b>-DumboBay-</b></h3>	
+				<h2>Just let me <b>Shop</b> and no one gets hurt. <b>-DumboBay-</b></h3>	
 				</div><!-- row -->
 			</div><!-- container -->
 		</div><!-- headerwrap -->
@@ -197,7 +196,7 @@
 								</div>
 								<div class="col-lg-4"> 
 									<b>Macbook Air</b><br>
-									Max bid: 3500 Baht<br>
+									Max bid: 12,500 Baht<br>
 									Due date: 12 Dec 2014<br>
 									<a href="#">More info..</a>
 								</div>
@@ -213,12 +212,12 @@
 								</div>
 								<div class="col-lg-4"> 
 									<b>Macbook Air</b><br>
-									Max bid: 3500 Baht<br>
+									Max bid: 3,500 Baht<br>
 									Due date: 12 Dec 2014<br>
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 centered auctionbutton">
-									<p>time left: 0:02:07</p>
+									<p>time left: 0:12:42</p>
 									<button type="button" class="btn btn-default">Add to Watch List</button>
 								</div>
 							</div>
@@ -229,12 +228,12 @@
 								</div>
 								<div class="col-lg-4"> 
 									<b>Macbook Air</b><br>
-									Max bid: 3500 Baht<br>
+									Max bid: 4,500 Baht<br>
 									Due date: 12 Dec 2014<br>
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 centered auctionbutton">
-									<p>time left: 0:02:07</p>
+									<p>time left: 1:01:17</p>
 									<button type="button" class="btn btn-default">Add to Watch List</button>
 								</div>
 							</div>
@@ -251,18 +250,18 @@
 		</div>
 		<!--end PRODUCT-->
 		<!-- =======================================================================-->
-		<div class="container w">
-			<div class="row centered">
-					<img src="assets/img/dumbobay_logo.png">
-			</div><!-- row -->
-		</div><!-- container -->
-
+		<br><br>
 
 		<!-- FOOTER -->
 		<div id="f">
 			<div class="container">
-				<div class="row centered">
-					<img src="assets/img/frappe_logo-small.png">
+				<div class="row">
+				<div class="col-md-6 col-md-push-2">
+					<img src="assets/img/DumboBay-Logo-b.png">
+				</div>
+				<div class="col-md-6 col-md-push-2">
+					<img src="assets/img/Frappe-Logo-bg-sm.png">
+				</div>
 				</div><!-- row -->
 			</div><!-- container -->
 		</div><!-- Footer -->
