--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -17,7 +17,15 @@
 
 	<!-- Custom styles for this template -->
 	<link href="assets/css/main.css" rel="stylesheet">
-
+	<style type="text/css">
+		.signin{
+			width: 70%;
+			padding: 5% 10%;
+			position: relative;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	</style>
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
@@ -41,50 +49,68 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="index.html">HOME</a></li>
-					<!--<li><a data-toggle="modal" data-target="#myModal" href="#myModal" class="signin">SIGN IN</a></li>-->
-					<li><a href="signin.html">SIGN IN</a></li>
-					<li><a href="services.html">SIGN UP</a></li>
+					<li><a href="index.html">HOME</a></li>
+					<li class="active"><a href="signin.html">SIGN IN</a></li>
+					<li><a href="signup.html">SIGN UP</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
 	</div>
 	<!-- =======================================================================-->
-	<div id="headerwrap">
+	<div id="myheaderwrap">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-8 col-lg-offset-2">
-					<h1>Just let me <b>Shop</b> <br>and no one gets hurt.</h1>
-					<h2>- DumboBay -</h2>
-					<h2><a href="product.html" class="link-product"><b>> Products <</b></a></h2>
-				</div>
+				<h2>Just let me <b>Shop</b> and no one gets hurt. <b>-DumboBay-</b></h2>	
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
 	<!-- ======================================================================= -->
-<!-- 	<div class="container w">
-		<div class="row centered">
-			<img src="assets/img/DumboBay-Logo-b.png">
-		</div>row 
-	</div>container -->
+	<!-- Log in form -->
+	<div class="signin">
+		<form class="form-horizontal" >
+			<div class="row centered">
+				<fieldset>
+					<legend><h1>SIGN IN</h1></legend>
+					<div align="center">
+						<div class="form-group">
+							<label style="left:20%" for="inputEmail" class="col-sm-2 control-label">Username</label>
+							<div class="col-sm-10">
+								<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your username in here." >
+							</div>
+						</div>
+						<div class="form-group">
+							<label style="left:20%" for="inputPassword" class="col-sm-2 control-label">Password</label>
+							<div class="col-sm-10">
+								<input style="width:50%" type="password" class="form-control" size="20" id="password" name="password" placeholder="********">
+							</div>
+						</div>
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+						<a href="#"><button type="submit" value="login" class="btn btn-danger">Sign In</button></a><br><br>
+						<a href="signup.html"><button type="button" value="login" class="btn btn-info">Sign Up</button></a>
+						<span class="help-block">If you have no account, click Sign Up.</span>
+					</div>
 
+				</fieldset>
+			</div>
+		</form>
+	</div>
 	<!-- FOOTER -->
 	<div id="f">
 		<div class="container">
 			<div class="row">
-			<div class="col-md-6 col-md-push-2">
-				<img src="assets/img/DumboBay-Logo-b.png">
-			</div>
-			<div class="col-md-6 col-md-push-2">
-				<img src="assets/img/Frappe-Logo-bg-sm.png">
-			</div>
+				<div class="col-md-6 col-md-push-2">
+					<img src="assets/img/DumboBay-Logo-b.png">
+				</div>
+				<div class="col-md-6 col-md-push-2">
+					<img src="assets/img/Frappe-Logo-bg-sm.png">
+				</div>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- Footer -->
 
 
-	<!-- MODAL FOR CONTACT 
-
+	<!-- MODAL FOR CONTACT -->
+	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -92,7 +118,7 @@
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					<h4 class="modal-title" id="myModalLabel">DumboBay</h4>
 				</div>
-		
+				<!-- Log in form -->
 				<form class="form-horizontal">
 					<div class="modal-body">
 						<div class="row centered">
@@ -120,10 +146,10 @@
 						<a href="#"><button type="submit" value="login" class="btn btn-danger">Sign In</button></a>
 					</div>
 				</form>
-				
-			</div>
-		</div>
-	</div> -->
+				<!-- /Log in form -->
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 
 
 <!-- Bootstrap core JavaScript
