--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -11,13 +11,12 @@
     <title>DUMBOBAY - shopping area</title>
 
     <!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/dumbobaycss.css" rel="stylesheet">
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href=<?php echo base_url("/assets/css/bootstrap.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/dumbobaycss.css");?> rel="stylesheet">
+    <link href=<?php echo base_url("assets/css/font-awesome.min.css");?> rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="assets/css/main.css" rel="stylesheet">
-
+    <!-- Custom styles for this template -->
+    <link href=<?php echo base_url("assets/css/main.css");?> rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -44,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
+          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><?php echo img("assets/img/dumbobay-logo-sm.png"); ?></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -90,157 +89,47 @@
         <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white; padding-bottom: 20px">
           <ol style="list-style-type:none; padding-left: 0px ;padding-bottom: 0px">
 
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/imac-retina-step1-hero-2014.jpeg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>27-inch iMac with Retina 5K Display</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-9">
-                      </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-9">
-                      </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-9">
-                      </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-9">
-                      </div>
-                      <div class="row col-md-1" style="padding-right:0px;padding-left:0px">
-                        <a href="#">remove</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
+          <?php foreach($products as $product => $row)
+                {
+                  echo '<li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">';
+                    echo '<div class="row">';
+                      echo '<div class="col-md-3">';
+                        echo '<img src="'.$row['image'].'" width="185" height="104">';
+                      echo '</div>';
+                      echo '<div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">';
+                        echo '<div>';
+                          echo '<div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">';
+                            echo '<div class="col-md-6">';
+                              echo '<h3>'.$row['name'].'</h3>';
+                            echo '</div>';
+                            echo '<div class="col-md-2" style="font-size: 13px; padding-top:27px">';
+                              echo $row['price'].' baht';
+                            echo '</div>';
+                            echo '<div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">';
+                              echo '<input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="'.$row['product_id'].'" placeholder="'.$row['amount'].'" >';
+                            echo '</div>';
+                            echo '<div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">';
+                              echo '2,000,000 bath';
+                            echo '</div>';
+                          echo '</div>';
+                          echo '<div class="row">';
+                            echo '<div class="row col-md-1">';
+                            echo '</div>';
+                            echo '<div class="row col-md-2">';
+                              echo '<a href="product_c/viewProductDetail/'.$row['product_id'].'"">More info...</a>';
+                            echo '</div>';
+                            echo '<div class="row col-md-9">';
+                            echo '</div>';
+                            echo '<div class="row col-md-1" style="padding-right:0px;padding-left:0px">';
+                              echo '<a href="cart_c/deleteProduct/'.$row['product_id'].'">remove</a>';
+                            echo '</div>';
+                          echo '</div>';
+                        echo '</div>';
+                      echo '</div>';
+                    echo '</div>';
+                  echo '</li>';
+                }
+              ?>
             
           </ol>
           <div class="row" stlye="padding-bottom:50px">
@@ -251,32 +140,13 @@
             <div class="row col-md-9">
             </div>
             <div class="row col-md-1" style="padding-left:50px">
-              <button type="button" class="btn btn-default"> Check out </button>
+              <a href="cart_c/checkOut"><button type="button" class="btn btn-default"> Check out </button></a>
           </div>
           </div>
         </div>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
-
-
-	<!-- FOOTER -->
-    <div id="f" style="margin-top:50px">
-      <div class="container">
-        <div class="row">
-        <div class="col-md-6 col-md-push-2">
-          <img src="assets/img/DumboBay-Logo-b.png">
-        </div>
-        <div class="col-md-6 col-md-push-2">
-          <img src="assets/img/Frappe-Logo-bg-sm.png">
-        </div>
-        </div><!-- row -->
-      </div><!-- container -->
-    </div><!-- Footer -->
-
-
-	
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
