--- a/application/views/signin.html
+++ b/application/views/signin.html
@@ -28,6 +28,7 @@
 		}
 	</style>
 
+	 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -67,10 +68,10 @@
 	</div><!-- headerwrap -->
 	<!-- ======================================================================= -->
 	<!-- Log in form -->
-	<?php echo validation_errors(); ?>
+	
    	<?php echo form_open('login_c'); ?>
 	<div class="signin">
-		<form class="form-horizontal" >
+		<form class="form-horizontal" id="login-form" name="login-form" onsubmit="return validateForm()">
 			<div class="row centered">
 				<fieldset>
 					<legend><h1>SIGN IN</h1></legend>
@@ -78,17 +79,17 @@
 						<div class="form-group">
 							<label style="left:20%" for="inputEmail" class="col-sm-2 control-label">Username</label>
 							<div class="col-sm-10">
-								<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your username in here." >
+								<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your username here." >
 							</div>
 						</div>
-						<div class="form-group">
+						<div class="form-group" >
 							<label style="left:20%" for="inputPassword" class="col-sm-2 control-label">Password</label>
 							<div class="col-sm-10">
-								<input style="width:50%" type="password" class="form-control" size="20" id="password" name="password" placeholder="********">
+								<input style="width:50%" type="password" class="form-control" size="20" id="password" name="passwordd">
 							</div>
 						</div>
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-						<a href="#"><button type="submit" value="login" class="btn btn-danger">Sign In</button></a><br><br>
+						<button type="submit" value="Submit" class="btn btn-danger">Sign In</button><br><br>
 						<a href="home_c/register"><button type="button" value="login" class="btn btn-info">Sign Up</button></a>
 						<span class="help-block">If you have no account, click Sign Up.</span>
 					</div>
@@ -97,50 +98,37 @@
 			</div>
 		</form>
 	</div>
-	
+	<!--  The form that will be parsed by jQuery before submit  -->
+	<script>
+	function validateForm() {
+	    var x = document.forms["login-form"]["username"].value;
+	    var y = document.forms["login-form"]["password"].value;
+	    var message ="";
+	    if (x==null || x=="" ) {
+	    	message = message +"Username";
+	    }
 
+	    if (y==null || y=="") {
+	    	if(message != "") message = message + " and Password";
+	    	else message = "Password";
+	    }
 
-	<!-- MODAL FOR CONTACT -->
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title" id="myModalLabel">DumboBay</h4>
-				</div>
-				<!-- Log in form -->
-				<form class="form-horizontal">
-					<div class="modal-body">
-						<div class="row centered">
-							<fieldset>
-								<legend>SIGN IN</legend>
-								<div align="center">
-									<div class="form-group">
-										<label style="left:20%" for="inputEmail" class="col-lg-2 control-label">Username</label>
-										<div class="col-lg-10">
-											<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your username in here." >
-										</div>
-									</div>
-									<div class="form-group">
-										<label style="left:20%" for="inputPassword" class="col-lg-2 control-label">Password</label>
-										<div class="col-lg-10">
-											<input style="width:50%" type="password" class="form-control" size="20" id="password" name="password" placeholder="********">
-										</div>
-									</div>
-								</div>
-							</fieldset>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-						<a href="#"><button type="submit" value="login" class="btn btn-danger">Sign In</button></a>
-					</div>
-				</form>
-				<!-- /Log in form -->
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
+	    if(message != ""){
+	    	alert(message+' must be filled out.');
+	    	return false;
+	    }
+
+	    if(x.length > 20) message = "Your username";
+	    if(y.length > 20 && message!="") message = message + " and your password";
+	    else if(y.length >20 ) message = "Your password";
+
+	    if(message != ""){
+	    	alert(message+' is over 20 characters.');
+	    	return false;
+	    }
+	  
+	}
+	</script>
 
 
 <!-- Bootstrap core JavaScript
