--- a/application/views/product.html
+++ b/application/views/product.html
@@ -48,7 +48,7 @@
 					<div class="row">
 						<!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
 						<div class="col-lg-6 col-lg-push-4">
-							<?php echo img("assets/img/price-tag-icon.png");?>
+							
 						</div>
 						<div class="col-lg-6" style="margin-top:20px;margin-left:-5%">
 							<h1>Products</h1>
@@ -68,10 +68,11 @@
 						<h2 align="center">Direct Sale</h2>
 						<br>
 						<!-- SEARCH DIRECT SALE-->
-						<form class="form-horizontal" id="search-form" name="search-form" onsubmit="return validateForm()">
+
+						<form class="form-horizontal" id="search-form" name="search-form" action="product_c/search" method="post">
 							<div class="row">
 								<div class="col-lg-9">
-									<input type="text" class="form-control" id="inputDirectSaleSearch" name"inputDirectSaleSearch">
+									<input type="text" class="form-control" id="inputDirectSaleSearch" name="search">
 								</div>
 								<div class="col-lg-3">
 									<button type="submit" value="submit" class="btn btn-default">Search</button>
