--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -4,6 +4,11 @@
     <?php
       include 'HTMLHeader.html';
     ?>
+    <style>
+      h3{
+        text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
+      }
+    </style>
   </head>
 
   <body>
@@ -14,18 +19,17 @@
             //echo $username;
             include 'buyer_menu.html';
           ?>
-
-  <div class="container w">
+  <div id="myheaderwrap">
     <div class="container">
       <div class="row centered">
         <div class="col-lg-8 col-lg-offset-2">
-        <h4>- Customer -</h4>
+        <h1>- Customer -</h1>
         <h3><a href="home_c/product_c" class=""><b>> Product <</b></a></h3>
         <h3><a href="home_c/cart" class=""><b>> My Cart <</b></a></h3>
         <h3><a href="home_c/watchlist" class=""><b>> Watch List <</b></a></h3>
         <h3><a href="home_c/message" class=""><b>> Messages Box <</b></a></h3>
         <h3><a href="home_c/history" class=""><b>> History <</b></a></h3>
-        </div>
+        </div> 
       </div><!-- row -->
     </div><!-- container -->
   </div><!-- headerwrap -->
