--- a/application/views/profile.html
+++ b/application/views/profile.html
@@ -63,8 +63,8 @@
 					<div class="row">
 						<!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
 						<div class="col-lg-6">
-							<a href="editProfileForm.html">
-								<button type="submit" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">Edit Profile</button>
+							<a href=<?php site_url('member_c/editProfile'); ?>>
+								<button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">Edit Profile</button>
 							</a>
 						</div>
 						<div class="col-lg-6">
@@ -75,10 +75,10 @@
 				<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
 					<div class="row profilecontent">
 						<div class="col-md-3" align="right">
-							<label class="control-label">Name:</label>								
+							<label class="control-label">Firstname:</label>								
 						</div>
 						<div class="col-md-9">
-							<p autofocus>Pookpick</p>
+							<p autofocus><?php echo $member->Firstname; ?></p>
 						</div>
 					</div>
 					<div class="row profilecontent">
@@ -86,7 +86,7 @@
 							<label class="control-label">Surname:</label>								
 						</div>
 						<div class="col-md-9">
-							<p>Leelasupakul</p>
+							<p><?php echo $member->Lastname; ?></p>
 						</div>
 					</div>
 					<div class="row profilecontent">
@@ -94,7 +94,7 @@
 							<label class="control-label">Address:</label>								
 						</div>
 						<div class="col-md-9">
-							<p>123 Bangrak Bangkok 10400</p>
+							<p><?php echo $member->Address; ?></p>
 						</div>
 					</div>
 					<div class="row profilecontent">
@@ -102,7 +102,7 @@
 							<label class="control-label">Email:</label>								
 						</div>
 						<div class="col-md-9">
-							<p>pookkistaa@gmail.com</p>
+							<p><?php echo $member->Email; ?></p>
 						</div>
 					</div>
 					<div class="row profilecontent">
@@ -110,15 +110,7 @@
 							<label class="control-label">Tel.:</label>								
 						</div>
 						<div class="col-md-9">
-							<p>088-633-3022</p>
-						</div>
-					</div>
-					<div class="row profilecontent">
-						<div class="col-md-3" align="right">
-							<label class="control-label">Send Address:</label>								
-						</div>
-						<div class="col-md-9">
-							<p>123 Bangrak Bangkok 10400</p>
+							<p><?php echo $member->Telephone; ?></p>
 						</div>
 					</div>
 				</div>
